Fix position of status icon in editor so it is visible when scrollingdown on a long Jot.

--- a/app/styles/editor.scss
+++ b/app/styles/editor.scss
@@ -41,15 +41,15 @@
 }
 
 #status-icon {
-  position: absolute;
-  top:      10px;
-  right:    10px;
+  position: fixed;
+  top:      52px;
+  right:    31px;
   cursor:   pointer;
 }
 
 #print-icon {
   position: absolute;
-  bottom:   10px;
+  top:      10px;
   right:    10px;
   cursor:   pointer;
 }
